customization works on ClooudRun

--- a/resume_customization/main.tex
+++ b/resume_customization/main.tex
@@ -286,12 +286,11 @@ strict schema validation and optimized queries.
 \BeginSection{Skills}
 \begin{skillsauto}
 \skillrow{Languages}{Python, C++, SQL, TypeScript}
-\skillrow{ML / Distributed Training}{PyTorch DDP, Hugging Face, Transformers, LoRA/QLoRA, DeepSpeed, PyTorch Lightning, JAX}
+\skillrow{ML / Distributed Training}{PyTorch DDP, Hugging Face, Transformers, LoRA/QLoRA, DeepSpeed, PyTorch Lightning}
 \skillrow{MLOps \& Serving}{Docker, Kubernetes, MLflow, FastAPI, Flask, vLLM, CI/CD, observability (latency, drift, structured logs)}
 \skillrow{Data \& Big Data Infra}{PySpark, Spark ML, Apache Beam, Airflow, BigQuery, PostgreSQL, Redis, MongoDB}
 \skillrow{Cloud \& Systems}{AWS (ECS, EC2, S3, Lambda, API Gateway), GCP (BigQuery, Dataproc), Azure ML, ROS2, WebSocket, kernel
 modules, ftrace}
-\skillrow{Soft Skills}{Communication, Teamwork, Problem Solving}
 \end{skillsauto} 
 
 % ===== Embedded machine-readable counts =====
