Updated apollo with new pipeline

--- a/apollo_service/sub_agents/test.ipynb
+++ b/apollo_service/sub_agents/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8b30a517",
    "metadata": {},
    "outputs": [],
@@ -15,8 +15,8 @@
     "    Adjust the test inputs (name/domain/linkedin/person_id) to a profile\n",
     "    you are allowed to query under your Apollo account.\n",
     "    \"\"\"\n",
-    "    test_first_name = \"Karishma\"          # TODO: set to a real, allowed contact\n",
-    "    test_last_name = \"Borah\"      # TODO: set to a real, allowed contact\n",
+    "    test_first_name = \"Lindsay\"          # TODO: set to a real, allowed contact\n",
+    "    test_last_name = \"Brown\"      # TODO: set to a real, allowed contact\n",
     "    test_domain = \"stripe.com\"       # TODO: set to matching company domain\n",
     "\n",
     "    email, phone = match_person_for_contact(\n",
@@ -37,6 +37,14 @@
     "            \"- Apollo did not match this person with sufficient confidence.\"\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddcd22de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -46,7 +54,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.12"
   }
  },
