--- a/apollo_service/test_3.ipynb
+++ b/apollo_service/test_3.ipynb
@@ -7,11 +7,23 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4088432485.py, line 162)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 162\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn data = resp.json()\u001b[39m\n                ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Calling Apollo /people/match\n",
+      "Request URL: https://api.apollo.io/api/v1/people/match\n",
+      "Request Payload:\n",
+      "{\n",
+      "  \"first_name\": \"Lindsay\",\n",
+      "  \"last_name\": \"Brown\",\n",
+      "  \"domain\": \"asana.com\",\n",
+      "  \"reveal_personal_emails\": false,\n",
+      "  \"reveal_phone_number\": true,\n",
+      "  \"webhook_url\": \"https://kaylyn-pseudomythical-jeffrey.ngrok-free.dev/apollo-webhook?token=super-secret-token\"\n",
+      "}\n",
+      "\n",
+      ">>> Response\n",
+      "HTTP 200\n"
      ]
     }
    ],
@@ -178,7 +190,7 @@
     "\n",
     "    try:\n",
     "        data = resp.json()\n",
-    "        return data\n",
+    "        return\n",
     "        print(\"Full JSON:\")\n",
     "        print(json.dumps(data, indent=2))\n",
     "\n",
@@ -201,8 +213,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8a3f7090",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '69117cc2d6998a001de7ecb9',\n",
+       " 'first_name': 'Lindsay',\n",
+       " 'last_name': 'Brown',\n",
+       " 'name': 'Lindsay Brown',\n",
+       " 'linkedin_url': None,\n",
+       " 'title': None,\n",
+       " 'email_status': None,\n",
+       " 'photo_url': None,\n",
+       " 'twitter_url': None,\n",
+       " 'github_url': None,\n",
+       " 'facebook_url': None,\n",
+       " 'extrapolated_email_confidence': None,\n",
+       " 'headline': None,\n",
+       " 'email': None,\n",
+       " 'organization_id': '54a121bb69702d8ed411cb02',\n",
+       " 'employment_history': [{'_id': '69117cc2d6998a001de7ecba',\n",
+       "   'created_at': None,\n",
+       "   'current': True,\n",
+       "   'degree': None,\n",
+       "   'description': None,\n",
+       "   'emails': None,\n",
+       "   'end_date': None,\n",
+       "   'grade_level': None,\n",
+       "   'kind': None,\n",
+       "   'major': None,\n",
+       "   'organization_id': '54a121bb69702d8ed411cb02',\n",
+       "   'organization_name': None,\n",
+       "   'raw_address': None,\n",
+       "   'start_date': None,\n",
+       "   'title': None,\n",
+       "   'updated_at': None,\n",
+       "   'id': '69117cc2d6998a001de7ecba',\n",
+       "   'key': '69117cc2d6998a001de7ecba'}],\n",
+       " 'organization': {'id': '54a121bb69702d8ed411cb02',\n",
+       "  'name': 'Asana',\n",
+       "  'website_url': 'http://www.asana.com',\n",
+       "  'blog_url': None,\n",
+       "  'angellist_url': None,\n",
+       "  'linkedin_url': 'http://www.linkedin.com/company/asana',\n",
+       "  'twitter_url': 'https://twitter.com/asana',\n",
+       "  'facebook_url': 'https://www.facebook.com/asana',\n",
+       "  'primary_phone': {'number': '+1 415-525-3888',\n",
+       "   'source': 'Owler',\n",
+       "   'sanitized_number': '+14155253888'},\n",
+       "  'languages': ['English'],\n",
+       "  'alexa_ranking': 286,\n",
+       "  'phone': '+1 415-525-3888',\n",
+       "  'linkedin_uid': '807257',\n",
+       "  'founded_year': 2008,\n",
+       "  'publicly_traded_symbol': 'ASAN',\n",
+       "  'publicly_traded_exchange': 'nasdaq',\n",
+       "  'logo_url': 'https://zenprospect-production.s3.amazonaws.com/uploads/pictures/690c80045812c2000192fd8a/picture',\n",
+       "  'crunchbase_url': None,\n",
+       "  'primary_domain': 'asana.com',\n",
+       "  'sic_codes': ['7374'],\n",
+       "  'naics_codes': ['54151'],\n",
+       "  'sanitized_phone': '+14155253888',\n",
+       "  'market_cap': '3.1B',\n",
+       "  'industry': 'information technology & services',\n",
+       "  'estimated_num_employees': 1900,\n",
+       "  'keywords': ['work management',\n",
+       "   'productivity',\n",
+       "   'project management',\n",
+       "   'organization',\n",
+       "   'collaboration',\n",
+       "   'digital transformation',\n",
+       "   'software',\n",
+       "   'productivity software',\n",
+       "   'task management',\n",
+       "   'information technology',\n",
+       "   'internet',\n",
+       "   'business productivity',\n",
+       "   'enterprise software',\n",
+       "   'computer software: prepackaged software',\n",
+       "   'technology',\n",
+       "   'software development',\n",
+       "   'enterprise collaboration',\n",
+       "   'dashboard reporting',\n",
+       "   'goal setting',\n",
+       "   'project tracking',\n",
+       "   'enterprise solutions',\n",
+       "   'automation workflows',\n",
+       "   'services',\n",
+       "   'cross-functional teams',\n",
+       "   'integrations',\n",
+       "   'ai-powered features',\n",
+       "   'team productivity',\n",
+       "   'operational efficiency',\n",
+       "   'goal management',\n",
+       "   'real-time updates',\n",
+       "   'mobile apps',\n",
+       "   'file sharing',\n",
+       "   'team alignment',\n",
+       "   'project portfolio management',\n",
+       "   'education',\n",
+       "   'ai integration',\n",
+       "   'non-profit',\n",
+       "   'collaboration tools',\n",
+       "   'portfolio management',\n",
+       "   'task assignment',\n",
+       "   'professional services',\n",
+       "   'workflow builder',\n",
+       "   'team collaboration',\n",
+       "   'ai-driven insights',\n",
+       "   'cloud-based platform',\n",
+       "   'computer software',\n",
+       "   'team workload management',\n",
+       "   'marketing',\n",
+       "   'real-time monitoring',\n",
+       "   'manufacturing',\n",
+       "   'healthcare',\n",
+       "   'performance metrics',\n",
+       "   'computer systems design and related services',\n",
+       "   'customizable views',\n",
+       "   'workflow automation',\n",
+       "   'b2b',\n",
+       "   'collaborative work platform',\n",
+       "   'task tracking',\n",
+       "   'task dependencies',\n",
+       "   'automated status updates',\n",
+       "   'financial services',\n",
+       "   'goal tracking software',\n",
+       "   'user-friendly interface',\n",
+       "   'goal tracking',\n",
+       "   'resource management',\n",
+       "   'status updates',\n",
+       "   'reporting dashboards',\n",
+       "   'campaign management',\n",
+       "   'creative production',\n",
+       "   'okr software',\n",
+       "   'custom templates',\n",
+       "   'workload management',\n",
+       "   'real-time insights',\n",
+       "   'cross-functional planning',\n",
+       "   'integration capabilities',\n",
+       "   'admin and security',\n",
+       "   'process standardization',\n",
+       "   'stakeholder communication',\n",
+       "   'creative approval workflows',\n",
+       "   'template library',\n",
+       "   'agile methodologies',\n",
+       "   'gantt charts',\n",
+       "   'kanban boards',\n",
+       "   'collaborative work',\n",
+       "   'enterprise-grade security',\n",
+       "   'project intake forms',\n",
+       "   'resource allocation',\n",
+       "   'capacity planning',\n",
+       "   'team workflows',\n",
+       "   'business continuity plans',\n",
+       "   'project milestones',\n",
+       "   'customizable dashboards',\n",
+       "   'visibility into workloads',\n",
+       "   'data-driven decision making',\n",
+       "   'automated reporting',\n",
+       "   'customer success',\n",
+       "   'implementation support',\n",
+       "   'project timelines',\n",
+       "   'milestone tracking',\n",
+       "   'employee onboarding',\n",
+       "   'process mapping',\n",
+       "   'workload balancing',\n",
+       "   'team productivity tools',\n",
+       "   'saas',\n",
+       "   'information technology & services',\n",
+       "   'enterprises',\n",
+       "   'nonprofit organization management',\n",
+       "   'professional training & coaching',\n",
+       "   'mechanical or industrial engineering',\n",
+       "   'health care',\n",
+       "   'health, wellness & fitness',\n",
+       "   'hospital & health care'],\n",
+       "  'organization_revenue_printed': '738.7M',\n",
+       "  'organization_revenue': 738695000.0,\n",
+       "  'industries': ['information technology & services'],\n",
+       "  'secondary_industries': [],\n",
+       "  'snippets_loaded': True,\n",
+       "  'industry_tag_id': '5567cd4773696439b10b0000',\n",
+       "  'industry_tag_hash': {'information technology & services': '5567cd4773696439b10b0000'},\n",
+       "  'retail_location_count': 0,\n",
+       "  'raw_address': '633 Folsom Street, Suite 100, San Francisco, California 94107, US',\n",
+       "  'street_address': '633 Folsom St',\n",
+       "  'city': 'San Francisco',\n",
+       "  'state': 'California',\n",
+       "  'postal_code': '94107-3600',\n",
+       "  'country': 'United States',\n",
+       "  'owned_by_organization_id': None,\n",
+       "  'short_description': \"Asana, Inc. is a technology company founded in 2008 by Dustin Moskovitz and Justin Rosenstein. Headquartered in San Francisco, it has additional offices in Tokyo, Vancouver, Warsaw, and Singapore. Asana develops a project and work management platform that helps teams coordinate, track, and manage their work efficiently.\\n\\nThe core product, also named Asana, is a workflow and project management tool that allows organizations to break down projects into smaller tasks, assign responsibilities, and set deadlines. It aims to minimize time spent on meetings and searching for information, enabling users to focus on their core work. Asana is available as a web application and through native apps for iOS, Android, and desktop, supporting collaboration across devices. The platform integrates with tools like Gmail and is available in multiple languages.\\n\\nAsana serves over 100,000 paying organizations worldwide, including notable customers such as eBay, Uber, and IBM. The company's name reflects its mission to bring ease and focus to work processes.\",\n",
+       "  'suborganizations': [],\n",
+       "  'num_suborganizations': 0,\n",
+       "  'annual_revenue_printed': '738.7M',\n",
+       "  'annual_revenue': 738695000.0,\n",
+       "  'technology_names': ['AI',\n",
+       "   'Amazon AWS',\n",
+       "   'Amazon SES',\n",
+       "   'Atlassian Cloud',\n",
+       "   'Citrix',\n",
+       "   'Gmail',\n",
+       "   'Google Apps',\n",
+       "   'Greenhouse.io',\n",
+       "   'Marketo',\n",
+       "   'Netlify',\n",
+       "   'OneTrust',\n",
+       "   'Route 53',\n",
+       "   'Stripe',\n",
+       "   'The Trade Desk',\n",
+       "   'WP Engine'],\n",
+       "  'current_technologies': [{'uid': 'ai', 'name': 'AI', 'category': 'Other'},\n",
+       "   {'uid': 'amazon_aws', 'name': 'Amazon AWS', 'category': 'Hosting'},\n",
+       "   {'uid': 'amazon_ses', 'name': 'Amazon SES', 'category': 'Email Delivery'},\n",
+       "   {'uid': 'atlassian_cloud', 'name': 'Atlassian Cloud', 'category': 'CMS'},\n",
+       "   {'uid': 'citrix',\n",
+       "    'name': 'Citrix',\n",
+       "    'category': 'Frameworks and Programming Languages'},\n",
+       "   {'uid': 'gmail', 'name': 'Gmail', 'category': 'Email Providers'},\n",
+       "   {'uid': 'google_apps', 'name': 'Google Apps', 'category': 'Other'},\n",
+       "   {'uid': 'greenhouse_io',\n",
+       "    'name': 'Greenhouse.io',\n",
+       "    'category': 'Recruitment'},\n",
+       "   {'uid': 'marketo', 'name': 'Marketo', 'category': 'Marketing Automation'},\n",
+       "   {'uid': 'netlify', 'name': 'Netlify', 'category': 'CMS'},\n",
+       "   {'uid': 'onetrust', 'name': 'OneTrust', 'category': 'Widgets'},\n",
+       "   {'uid': 'route_53', 'name': 'Route 53', 'category': 'Domain Name Services'},\n",
+       "   {'uid': 'stripe', 'name': 'Stripe', 'category': 'Payments'},\n",
+       "   {'uid': 'the_trade_desk',\n",
+       "    'name': 'The Trade Desk',\n",
+       "    'category': 'Demand Side Platforms'},\n",
+       "   {'uid': 'wp_engine', 'name': 'WP Engine', 'category': 'CMS'}],\n",
+       "  'org_chart_root_people_ids': ['66f2afad97d1f600015b63e3'],\n",
+       "  'org_chart_sector': 'OrgChart::SectorHierarchy::Rules::IT',\n",
+       "  'org_chart_removed': False,\n",
+       "  'org_chart_show_department_filter': True,\n",
+       "  'organization_headcount_six_month_growth': None,\n",
+       "  'organization_headcount_twelve_month_growth': None,\n",
+       "  'organization_headcount_twenty_four_month_growth': None},\n",
+       " 'intent_strength': None,\n",
+       " 'show_intent': False,\n",
+       " 'email_domain_catchall': False,\n",
+       " 'revealed_for_current_team': True,\n",
+       " 'departments': [],\n",
+       " 'subdepartments': [],\n",
+       " 'functions': [],\n",
+       " 'seniority': None}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"person\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e688c8",
    "metadata": {},
    "outputs": [],
    "source": []
